frontend/tests/errors/ER-033/vector_matrix_shape_mismatch/test.vx
// @rfc: docs/vexel-rfc.md#types
// @desc: Native vector and matrix operators reject mismatched shapes. | Vector/matrix shape mismatch is rejected

&^main() -> #i32 {
  a:#v(#i32, 2) = [1, 2];
  b:#v(#i32, 3) = [3, 4, 5];
  c:#v(#i32, 2) = a + b;
  0
}
